# Bestel-RFP-Test

./: README.md  dump.rdb
backend/: .dockerignore  .env  Dockerfile  dump.rdb  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  agent_factory.py  prompts.py  tools.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  ai_routes.py  baw_routes.py  document_routes.py  project_routes.py  websocket_routes.py
backend/app/core/: celery_app.py  logging_config.py  settings.py  websocket_manager.py
backend/app/schemas/: __init__.py  models.py
backend/app/services/: ai_service.py  baw_service.py  data_reset_service.py  document_service.py  embedding_service.py  project_service.py  rate_limiter_service.py  vector_store_service.py
backend/app/static/: index.html
backend/app/tasks/: __init__.py  document_tasks.py
backend/app/utils/: doc_processor.py
backend/app/workflows/: __init__.py
backend/app/workflows/hierarchical_summarization/: README.md  __init__.py  chains.py  config.py  graph.py  nodes.py  prompts.py  state.py  utils.py
backend/tests/: redis_test.py  test_api.py  test_direct.py  test_embeddings.py  test_streaming.py  test_workflow_debug.py
